--- a/Front/Posts/post.css
+++ b/Front/Posts/post.css
@@ -38,32 +38,45 @@
 }
 
 /* Header */
+
 header {
     display: flex;
     padding: 2%;
     background-color: var(---branco-roxo);
-    align-items: center;
-    justify-content: center; 
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #logo {
-    width: 20%;
-    margin-right: auto; 
+    width: 10%;
 }
 
 #botoes-header {
     display: flex;
     align-items: center;
-    justify-content: center; 
-    flex: 1; 
+    flex-wrap: wrap;
 }
 
 .palavras-header {
+    margin-right: 3vw;
     font-size: 17px;
     text-decoration: none;
     color: var(---roxo-violeta);
     font-family: "Kanit", sans-serif;
-    margin: 0 1em; 
+}
+
+#cadastrar {
+    text-align: center;
+    background-color: var(---roxo-escuro1);
+    box-shadow: 3px 4px 4px var(---roxo-violeta);
+    text-decoration: none;
+    border-radius: 5px;
+    height: 2.3vh;
+    width: auto; 
+    padding: 1%;
+    font-size: 17px;
+    color: var(---cinza2);
+    font-family: "Kanit", sans-serif;
     cursor: pointer;
 }
 
@@ -74,8 +87,7 @@ body {
 
 main {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     padding: 2.5%;
     background-color: var(---cinza-roxo);
 }
@@ -83,13 +95,12 @@ main {
 #bloco {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;  
     width: 90%;
 }
 
 .comment-section {
     background-color: var(---lilas2);
-    width: 90%;
     max-width: 25rem;
     border-radius: 0.5em;
     padding: 2em;
@@ -130,6 +141,27 @@ main {
     background-color: var(---roxo);
 }
 
+#logout{
+    margin-top: 1%;
+}
+
+#button-sair{
+    display: flex;
+    padding: 15%;
+    border-radius: 3px;
+    border: 0;
+    font-size: 17px;
+    background-color: var(---roxo);
+    color: var(---branco-roxo);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: "Kanit", sans-serif;
+}
+
+#button-sair:hover{
+    background-color: var(---roxo-violeta);
+}
+
 /* Comentários */
 #comments {
     display: flex;
@@ -137,14 +169,12 @@ main {
     align-items: center;
     gap: 4vh;
     width: 100%;
-    margin-top: 2%;
 }
 
 .postagem {
     background-color: var(---cinza-roxo-escuro);
     border-radius: 0.3em;
     padding: 2em;
-    width: 100%;
     max-width: 30rem;
 }
 
